Authentication to app.js
