# openapi.yaml
@@ -1,35 +1,135 @@
-# Copyright 2017 Google Inc. All Rights Reserved.
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#    http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
----
+# [START swagger]
 swagger: "2.0"
 info:
-  title: "Timeline"
-  description: "Get client timeline data."
+  description: "A simple Google Cloud Endpoints API example."
+  title: "rittlehash endpoints"
   version: "1.0.0"
-# This field will be replaced by the deploy_api.sh script.
 host: "jaredbulloch.appspot.com"
+# [END swagger]
+consumes:
+- "application/json"
+produces:
+- "application/json"
 schemes:
-  - "https"
+- "https"
 paths:
-  "/timeline":
-    get:
-      description: "Get client timeline data."
-      operationId: "timelineId"
+  "/echo":
+    post:
+      description: "Echo back a given message."
+      operationId: "echo"
+      produces:
+      - "application/json"
       responses:
         200:
-          description: "Success."
+          description: "Echo"
           schema:
-            type: string
-        500:
-          description: "Error."
+            $ref: "#/definitions/echoMessage"
+      parameters:
+      - description: "Message to echo"
+        in: body
+        name: message
+        required: true
+        schema:
+          $ref: "#/definitions/echoMessage"
+  "/timeline":
+    get:
+      description: "Returns timeline data."
+      operationId: "timeline"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "Timeline data."
+          schema:
+            $ref: "#/definitions/timeline"
+      security:
+      - google_jwt: []
+  "/auth/info/googlejwt":
+    get:
+      description: "Returns the requests' authentication information."
+      operationId: "auth_info_google_jwt"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "Authenication info."
+          schema:
+            $ref: "#/definitions/authInfoResponse"
+      security:
+      - google_jwt: []
+  "/auth/info/googleidtoken":
+    get:
+      description: "Returns the requests' authentication information."
+      operationId: "authInfoGoogleIdToken"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "Authenication info."
+          schema:
+            $ref: "#/definitions/authInfoResponse"
+      security:
+      - google_id_token: []
+definitions:
+  echoMessage:
+    type: "object"
+    properties:
+      message:
+        type: "string"
+  timeline:
+    type: "object"
+    properties:
+      Client:
+        type: "string"
+        description: Name of the Client.
+      Stage:
+        type: "string"
+        description: Client Stage.
+      Start:
+        type: "date"
+        description: Stage start day.
+      End:
+        type: "date"
+        description: Stage end day.
+  authInfoResponse:
+    properties:
+      id:
+        type: "string"
+      email:
+        type: "string"
+# This section requires all requests to any path to require an API key.
+security:
+- api_key: []
+securityDefinitions:
+  # This section configures basic authentication with an API key.
+  api_key:
+    type: "apiKey"
+    name: "key"
+    in: "query"
+  # This section configures authentication using Google API Service Accounts
+  # to sign a json web token. This is mostly used for server-to-server
+  # communication.
+  google_jwt:
+    authorizationUrl: ""
+    flow: "implicit"
+    type: "oauth2"
+    # This must match the 'iss' field in the JWT.
+    x-google-issuer: "jwt-client.endpoints.sample.google.com"
+    # Update this with your service account's email address.
+    x-google-jwks_uri: "https://www.googleapis.com/service_accounts/v1/jwk/YOUR-SERVICE-ACCOUNT-EMAIL"
+    # This must match the "aud" field in the JWT. You can add multiple
+    # audiences to accept JWTs from multiple clients.
+    x-google-audiences: "echo.endpoints.sample.google.com"
+  # This section configures authentication using Google OAuth2 ID Tokens.
+  # ID Tokens can be obtained using OAuth2 clients, and can be used to access
+  # your API on behalf of a particular user.
+  google_id_token:
+    authorizationUrl: ""
+    flow: "implicit"
+    type: "oauth2"
+    x-google-issuer: "https://accounts.google.com"
+    x-google-jwks_uri: "https://www.googleapis.com/oauth2/v3/certs"
+    # Your OAuth2 client's Client ID must be added here. You can add
+    # multiple client IDs to accept tokens from multiple clients.
+    x-google-audiences: "189480166723-1nd5751doqpa4pu7o0ifv8rv2fjgop4i.apps.googleusercontent.com"
+
